2nd commit: add button1

--- a/news_01.html
+++ b/news_01.html
@@ -10,14 +10,14 @@
 </head>
 <body>
     <section class="news">
-        <h1 class="title">大熊猫宝宝首次亮相</h1>
+        <h1 class="title">ข่าวสั้น: <u>大熊猫</u>宝宝首次<u>亮相</u></h1>
         <div class="content">
-            近日，一只刚满一百天的大熊猫宝宝在成都大熊猫繁育研究基地首次公开亮相。许多游客纷纷前来参观，小熊猫在工作人员的陪伴下，与大家见面，表现得非常活泼可爱。
+            近日，一只刚满一百天的大熊猫<u>宝宝</u>在成都大熊猫<u>繁育研究基地</u>首次公开亮相。许多游客纷纷前来参观，小熊猫在工作人员的陪伴下，与大家见面，表现得非常<u>活泼</u>可爱。
         </div>
     </section>
     <section class="vocabulary">
-        <h3 class="vocab-title">แสดงคำศัพท์สำคัญ</h3>
-        <ul class="vocab-list">
+        <button class="vocab-title">แสดงคำศัพท์สำคัญ</button>
+        <ul class="vocab-list" style="display: none;">
             <li>大熊猫 (dàxióngmāo) - แพนด้ายักษ์</li>
             <li>宝宝 (bǎobao) - ลูกน้อย</li>
             <li>繁育研究基地 (fányù yánjiū jīdì) - ศูนย์วิจัยและเพาะพันธุ์</li>
